# qrvc

./: CMakeLists.txt  GUI.txt  LICENSE  README  README.txt  build.py  build.sh  dct_4x4.m  dec_options.txt  ffmpeg_options.txt  filegen.py  filegen2.py  filegen3.py  info.txt  info_dec.txt  steganography.py  versions.txt
cmake-mingw-toolchains/: Toolchain-Ubuntu-mingw32.cmake  Toolchain-Ubuntu-mingw64.cmake  Toolchain-Ubuntu-musl_x86_32.cmake  Toolchain-Ubuntu-musl_x86_64.cmake  config.mak
cross/: MinGW 64 how-to.html
cross/MinGW 64 how-to_files/: mingw-layout.html
encoder/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  encoder.cpp  pch.h
include/: ArgsParser.h  Chunk.h  Config.h  Decode.h  Encode.h  Job.h  MTDecoder.h  MTEncoder.h  OutputQueue.h  Worker.h  config.h  dct.h  encoder.h  help.h  inputQueue.h  pch.h  steganography.h  utilities.h  utilities_c.h  wavelet.h
libs/: CMakeLists.txt  config.h  quirc_identify_m.c
src/: ArgsParser.cpp  Chunk.cpp  Config.cpp  Decode.cpp  Encode.cpp  MTDecoder.cpp  MTEncoder.cpp  OutputQueue.cpp  Worker.cpp  decoder.cpp  encoder.cpp  exp.cpp  inputQueue.cpp  main.cpp  qrdectxt_m.c  steganography.cpp  wavelet.cpp
tests/: CMakeLists.txt  dct_test.cpp  dec_test.sh  decode_mt_test.cpp  decode_test.cpp  enc_ff_test.sh  enc_test.sh  encdec_rnd_test.sh  encdec_test.sh  ff_dec.sh  ff_h265_reenc.sh  ff_mtdec_vlc.sh  hashsum_speed_test.cpp  mtdec_ff.sh  mtdec_vlc_ff.sh  mtenc_ff_test.sh  mtenc_test.sh  mtencdec_test.sh  steg_test.sh  stega_test.cpp  stegencdec_test.cpp  test.py  wavelet_test.cpp  x264_fullhelp.txt  x265_fullhelp.txt
toolchains/: Toolchain-Ubuntu-mingw32.cmake  Toolchain-Ubuntu-mingw64.cmake  Toolchain-Ubuntu-musl_x86_64.cmake
toolchains/musl/: READ_BEFORE_BUILD
